[gd_scene load_steps=76 format=3 uid="uid://bhom5xnej108o"]

[ext_resource type="Script" uid="uid://cbfdknisylbek" path="res://Common/Destructable.gd" id="1_pcxda"]
[ext_resource type="Script" uid="uid://dkfi6038kg5fb" path="res://Inimigos/EnemyWalk.gd" id="2_5yb3g"]
[ext_resource type="Texture2D" uid="uid://y6o2ptmn8esj" path="res://Sprites/EnemyWalk/char_a_p1_0bas_humn_v01.png" id="3_ygdud"]
[ext_resource type="Texture2D" uid="uid://d28802mmjr58j" path="res://Sprites/EnemyWalk/char_a_p1_5hat_pnty_v04.png" id="4_qkp6b"]
[ext_resource type="Script" uid="uid://iljegkamfg0y" path="res://Weapons/BasicGun.gd" id="5_l18te"]
[ext_resource type="PackedScene" uid="uid://ciu6qrhn3f35e" path="res://Weapons/Bullet.tscn" id="6_xbx78"]
[ext_resource type="Shader" uid="uid://1wjb43dlttla" path="res://Common/HealthBar.gdshader" id="7_12juo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7fl83"]
size = Vector2(50, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkj6i"]
atlas = ExtResource("3_ygdud")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tag4"]
atlas = ExtResource("3_ygdud")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg7la"]
atlas = ExtResource("3_ygdud")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1q8x"]
atlas = ExtResource("3_ygdud")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efp08"]
atlas = ExtResource("3_ygdud")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewu85"]
atlas = ExtResource("3_ygdud")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhmib"]
atlas = ExtResource("3_ygdud")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h31us"]
atlas = ExtResource("3_ygdud")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_42qvb"]
atlas = ExtResource("3_ygdud")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_46lft"]
atlas = ExtResource("3_ygdud")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f0ts"]
atlas = ExtResource("3_ygdud")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nhqd"]
atlas = ExtResource("3_ygdud")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_103bq"]
atlas = ExtResource("3_ygdud")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejwu1"]
atlas = ExtResource("3_ygdud")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp4gm"]
atlas = ExtResource("3_ygdud")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_84cin"]
atlas = ExtResource("3_ygdud")
region = Rect2(448, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmj4l"]
atlas = ExtResource("3_ygdud")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybiya"]
atlas = ExtResource("3_ygdud")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrna3"]
atlas = ExtResource("3_ygdud")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1702"]
atlas = ExtResource("3_ygdud")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_afmi2"]
atlas = ExtResource("3_ygdud")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr1qh"]
atlas = ExtResource("3_ygdud")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_upa5f"]
atlas = ExtResource("3_ygdud")
region = Rect2(384, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo5ua"]
atlas = ExtResource("3_ygdud")
region = Rect2(448, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8yv1"]
atlas = ExtResource("3_ygdud")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfj20"]
atlas = ExtResource("3_ygdud")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kiwik"]
atlas = ExtResource("3_ygdud")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mww1c"]
atlas = ExtResource("3_ygdud")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxi7n"]
atlas = ExtResource("3_ygdud")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_878ck"]
atlas = ExtResource("3_ygdud")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_usxhk"]
atlas = ExtResource("3_ygdud")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecl2i"]
atlas = ExtResource("3_ygdud")
region = Rect2(448, 320, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_46lft"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkj6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tag4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg7la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1q8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efp08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewu85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhmib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h31us")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42qvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46lft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f0ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nhqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_103bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejwu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp4gm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84cin")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmj4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybiya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrna3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1702")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afmi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr1qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upa5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo5ua")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8yv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfj20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiwik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mww1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxi7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_878ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usxhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecl2i")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bxbd2"]
atlas = ExtResource("4_qkp6b")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k2nk"]
atlas = ExtResource("4_qkp6b")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh0yd"]
atlas = ExtResource("4_qkp6b")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5h5q"]
atlas = ExtResource("4_qkp6b")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e63o"]
atlas = ExtResource("4_qkp6b")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3os1s"]
atlas = ExtResource("4_qkp6b")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgy0h"]
atlas = ExtResource("4_qkp6b")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cc5h"]
atlas = ExtResource("4_qkp6b")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6dr1"]
atlas = ExtResource("4_qkp6b")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pc1r"]
atlas = ExtResource("4_qkp6b")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nq6k"]
atlas = ExtResource("4_qkp6b")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0gny"]
atlas = ExtResource("4_qkp6b")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytrpv"]
atlas = ExtResource("4_qkp6b")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a2cg"]
atlas = ExtResource("4_qkp6b")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00flx"]
atlas = ExtResource("4_qkp6b")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5vqm"]
atlas = ExtResource("4_qkp6b")
region = Rect2(448, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc35l"]
atlas = ExtResource("4_qkp6b")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_in317"]
atlas = ExtResource("4_qkp6b")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq12h"]
atlas = ExtResource("4_qkp6b")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_raf42"]
atlas = ExtResource("4_qkp6b")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulejr"]
atlas = ExtResource("4_qkp6b")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ersxi"]
atlas = ExtResource("4_qkp6b")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fqga"]
atlas = ExtResource("4_qkp6b")
region = Rect2(384, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tjni"]
atlas = ExtResource("4_qkp6b")
region = Rect2(448, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14jtw"]
atlas = ExtResource("4_qkp6b")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcc7i"]
atlas = ExtResource("4_qkp6b")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj0et"]
atlas = ExtResource("4_qkp6b")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ae3t"]
atlas = ExtResource("4_qkp6b")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6eht"]
atlas = ExtResource("4_qkp6b")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_04vxa"]
atlas = ExtResource("4_qkp6b")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_63ynt"]
atlas = ExtResource("4_qkp6b")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_er77k"]
atlas = ExtResource("4_qkp6b")
region = Rect2(448, 320, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_n5h5q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxbd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k2nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh0yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5h5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e63o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3os1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgy0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cc5h")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6dr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pc1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nq6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0gny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytrpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a2cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00flx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5vqm")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc35l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in317")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq12h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raf42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulejr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ersxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fqga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tjni")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14jtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcc7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj0et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ae3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6eht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04vxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63ynt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er77k")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2p5hl"]
resource_local_to_scene = true
shader = ExtResource("7_12juo")
shader_parameter/hp_per = 1.0
shader_parameter/green = Vector3(0, 1, 0)
shader_parameter/red = Vector3(1, 0, 0)

[node name="Destructable" type="Area2D" groups=["Destructable"]]
z_index = 2
z_as_relative = false
y_sort_enabled = true
collision_layer = 7
collision_mask = 8
script = ExtResource("1_pcxda")
damage_layers = Array[int]([1])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0.5)
shape = SubResource("RectangleShape2D_7fl83")
script = ExtResource("2_5yb3g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D"]
texture_filter = 1
position = Vector2(2, -0.5)
scale = Vector2(2.67, 2.67)
sprite_frames = SubResource("SpriteFrames_46lft")
animation = &"down"

[node name="ChapeuAnimate" type="AnimatedSprite2D" parent="CollisionShape2D"]
visible = false
texture_filter = 1
position = Vector2(2, -0.5)
scale = Vector2(2.67, 2.67)
sprite_frames = SubResource("SpriteFrames_n5h5q")
animation = &"left"

[node name="BasicGun" type="Node2D" parent="CollisionShape2D"]
visible = false
script = ExtResource("5_l18te")
bullet = ExtResource("6_xbx78")
damage_layer = Array[int]([0, 2])

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_2p5hl")
offset_left = -55.0
offset_top = -77.0
offset_right = 56.0
offset_bottom = -67.0
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="CollisionShape2D" method="_on_timer_timeout"]
